fixes blockquote, code overflow and homepage footer

--- a/assets/sass/code.scss
+++ b/assets/sass/code.scss
@@ -2,6 +2,7 @@
     padding:1.6em;
     background-color: rgb(63, 63, 63);
     clear:both;
+	overflow: scroll;
 }
 
 .highlight > pre {
